# Versor

./: .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  FEYNMAN_BENCHMARK.md  LICENSE  NOTICE  README.md  TODO.md  __init__.py  demo.py  index.html  log.py  main.py  mkdocs.yml  multi_rotor_qm9_best.pt  objects.inv  pyproject.toml  relicense.py  sitemap.xml  test_md17_quick.py
.github/ISSUE_TEMPLATE/: bug_performance.yml  bug_report.yml  config.yml  feature_request.yml  feature_task.yml  math_question.yml  new_task.yml  performance.yml  theory_question.yml
.github/workflows/: docs.yml  tests.yml
api/core/: index.html
api/functional/: index.html
api/layers/: index.html
api/optimizers/: index.html
benchmarks/: benchmark_core.py
conf/: config.yaml
conf/optimizer/: exponential_sgd.yaml  riemannian_adam.yaml
conf/task/: abc.yaml  crossmodal.yaml  deap_eeg.yaml  deeplense.yaml  feynman.yaml  feynman_sweep.yaml  gtm.yaml  hyperbolic.yaml  lm.yaml  lqa.yaml  manifold.yaml  md17.yaml  motion.yaml  multi_rotor_qm9.yaml  pdbbind.yaml  qm9.yaml  sanity.yaml  semantic.yaml  slm.yaml  (+3 more)
core/: __init__.py  algebra.py  cga.py  config.py  decomposition.py  device.py  metric.py  module.py  multivector.py  partitioned_algebra.py  search.py  validation.py  visualizer.py
datalib/: __init__.py  arc.py  benchmarks.py  deap.py  gtm.py  lqa.py  md17.py  slm.py  symbolic_regression.py
datasets/: __init__.py  abc.py  amass.py  crossmodal.py  deeplense.py  feynman.py  har.py  md17.py  modelnet.py  newsgroups.py  pdbbind.py  qm9.py  symbolic_regression.py  synthetic.py  text.py  weatherbench.py
design_guide/: index.html
docs/: API.md  CONCEPTS.md  GETTING_STARTED.md  LAYERS.md  MATHEMATICS.md  TASKS.md  design_guide.md  faq.md  index.md  innovations.md  mathematical.md  milestone.md  philosophy.md  tutorial.md
examples/: demo.py  main.py
experiments/: __init__.py  _lib.py  dbg_linear_basis_mixing.py  dbg_lorentz.py  dbg_maxwell_equations.py  dbg_minkowski_lattice.py  dbg_navier_stokes.py  dbg_riemann_zeta.py  dbg_yang_mills.py  gdo.py  geometric_muzero.py  inc_embed_compress.py  inc_gdo.py  inc_lattice_morph.py  inc_pendulum_dynamics.py  inc_sta_trajectory.py  kyber_mlwe_svp.py  lorentz_debugger.py  minkowski_lattice.py  navier_stokes.py  orthogonality.py  riemann_zeta.py  sta_trajectory.py  svp_lattice_breaker.py  yang_mills.py
faq/: index.html
functional/: __init__.py  activation.py  loss.py  orthogonality.py
innovations/: index.html
layers/: __init__.py  attention.py  base.py  embedding.py  gnn.py  grade.py  linear.py  multi_rotor.py  multi_rotor_ffn.py  normalization.py  projection.py  rotor.py  rotor_gadget.py
mathematical/: index.html
milestone/: index.html
models/: __init__.py  cad_net.py  eeg_net.py  feynman_net.py  ga_transformer.py  gbn.py  glu_net.py  implicit_solver.py  invariant.py  iterative_unbender.py  lensing_net.py  lqa_net.py  md17_forcenet.py  molecule.py  motion.py  multi_rotor.py  pdbbind_net.py  rotor_translate.py  sr_estimator.py  sr_net.py  time_series.py  variable_grouper.py  weather_gbn.py
optimizers/: __init__.py  riemannian.py
philosophy/: index.html
scripts/: analyze_gtm.py
search/: search_index.json
tasks/: __init__.py  abc.py  base.py  cross_modal.py  deap_eeg.py  feynman.py  feynman_sweep.py  glu.py  gtm.py  hyperbolic.py  lm.py  lqa.py  manifold.py  md17.py  motion.py  multi_rotor_qm9.py  pdbbind.py  qm9.py  sanity_check.py  semantic.py  slm.py  so3.py  symbolic_regression.py  weatherbench.py
tests/: conftest.py  test_abc.py  test_analysis.py  test_attention.py  test_core.py  test_decomposition.py  test_deeplense.py  test_degenerate_algebra.py  test_exp_signatures.py  test_extensions.py  test_feynman.py  test_framework_pipeline.py  test_ga_transformer.py  test_geodesic.py  test_grade_plan.py  test_hermitian_metrics.py  test_iterative_unbender.py  test_layer_optimization.py  test_layers.py  test_md17_complete.py  test_metric_search.py  test_multivector.py  test_optimization.py  test_partitioned_algebra.py  test_partitioned_dense_reference.py  test_partitioned_highdim.py  test_pdbbind.py  test_properties.py  test_riemannian_optimizer.py  test_rotor_gadget.py  test_rotor_translate.py  test_symbolic_regression.py  test_weatherbench.py
tutorial/: index.html
utils/: compat.py
(+134 files in other folders)
