[project]
name = "versor"
version = "0.1.0"
description = "A PyTorch framework for Geometric Algebra Deep Learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "plotly>=6.5.2",
    "imageio>=2.37.2",
]
demo = [
    "streamlit>=1.50.0",
    "plotly>=6.5.2",
]
examples = [
    "transformers>=4.30.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
]
graph = [
    "torch-geometric>=2.6.1",
]
pdbbind = [
    "biopython>=1.79",
    "rdkit>=2022.9.1",
]
weather = [
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "dask>=2023.1.0",
]
cad = [
    "trimesh>=3.20.0",
    "open3d>=0.17.0",
]
all = [
    "versor[viz,demo,examples,graph]",
]
all_tasks = [
    "versor[graph,pdbbind,weather,cad]",
]
