[project]
name = "versor"
version = "1.0.0"
description = "A PyTorch framework for Geometric Algebra Deep Learning"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Eunkyum Kim", email = "nemonanconcode@gmail.com" },
]
keywords = [
    "geometric-algebra",
    "clifford-algebra",
    "deep-learning",
    "pytorch",
    "rotor",
    "multivector",
    "equivariant",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/Concode0/Versor"
Repository = "https://github.com/Concode0/Versor"

[project.optional-dependencies]
sr = [
    "pmlb>=1.0.1.post3",
    "scikit-learn>=1.3.0",
    "sympy>=1.12",
]
md17 = [
    "torch-geometric>=2.6.1",
]
lqa = [
    "sentence-transformers>=5.1.2",
    "datasets>=2.16.0,<4.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
demo = [
    "streamlit>=1.50.0",
    "plotly>=6.5.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.8.0",
]
all_tasks = [
    "versor[sr,md17,lqa]",
]
all = [
    "versor[sr,md17,lqa,viz,demo,dev]",
]

[tool.setuptools.packages.find]
include = ["core*", "layers*", "models*", "datalib*", "optimizers*", "functional*", "tasks*", "examples*", "experiments*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
    "integration: tests requiring external data or network access",
    "unit: fast, self-contained unit tests",
]

[dependency-groups]
docs = [
    "mkdocs<2.0",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.21",
]
